--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -12708,6 +12708,11 @@ a:hover span {
 
 /* ///////////////////////////////////////// */
 /* dropdwon cart */
+
+.dropdown-cart-container{
+  position: relative;
+}
+
 .dropdown-cart {
   visibility: hidden;
   position: absolute;
