--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -12010,6 +12010,13 @@ a:hover span {
   color: #ffffff;
 }
 
+.checkoutButtons .goToShop {
+  background: none;
+  border: 1px solid #D9D9D9;
+  color: #949494;
+  gap: 10px;
+}
+
 @media (max-width: 992px) {
   .cartItems {
     flex-direction: column;
