--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -12349,6 +12349,13 @@ a:hover span {
   color: #ffffff;
 }
 
+.checkoutButtons .goToShop {
+  background: none;
+  border: 1px solid #D9D9D9;
+  color: #949494;
+  gap: 10px;
+}
+
 @media (max-width: 992px) {
   .cartItems {
     flex-direction: column;
