--- a/public/assets/web/ASSets/css/shop.css
+++ b/public/assets/web/ASSets/css/shop.css
@@ -1292,6 +1292,8 @@ body.dark {
                   }
                   h3 {
                     color: #c4c1c1;
+                    text-wrap: nowrap;
+                    margin-top: 20px;
                   }
                 }
               }
