--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -12329,20 +12329,25 @@ a:hover span {
 .checkoutButtons .left {
   border: 1px solid #d9d9d9;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: clamp( 12px, 0.78125vw, 15px);
   font-weight: 700;
   line-height: 18px;
   text-align: center;
-  padding: 15px 20px;
+  padding: clamp( 8px, 0.78125vw, 15px) clamp( 12px, 1.0416666666666665vw, 20px);
   color: #949494;
+
+  span{
+    height: 25px;
+    display: inline-block;
+  }
 }
 
 .checkoutButtons button {
   background: #fd9636;
   border: none;
   border-radius: 10px;
-  padding: 15px 20px;
-  font-size: 15px;
+  padding: clamp( 8px, 0.78125vw, 15px) clamp( 12px, 1.0416666666666665vw, 20px);
+  font-size: clamp( 12px, 0.78125vw, 15px);
   font-weight: 700;
   line-height: 18px;
   text-align: center;
@@ -12351,9 +12356,13 @@ a:hover span {
 
 .checkoutButtons .goToShop {
   background: none;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   color: #949494;
   gap: 10px;
+  
+  svg{
+    height: 25px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -12573,6 +12582,10 @@ a:hover span {
     flex-direction: column;
     align-items: flex-start;
     direction: ltr !important;
+
+    .location-form-group{
+      width: 100% !important;
+    }
   }
 
   .inputsRow .form-group {
@@ -13056,7 +13069,7 @@ a:hover span {
 }
 /* ///////////////////////////////////////////////////////// */
 /* dropdwon cart */
-.dropdown-cart-container{
+.dropdown-cart-container {
   position: relative;
 }
 
@@ -13330,6 +13343,80 @@ a:hover span {
   }
 }
 
+body.dark{
+  .dropdown-cart {
+    background-color: var(--dark-mode-second);
+    border: 1px solid var(--dark-mode-white);
+
+    .dropdown-cart-header {
+      .cart-title {
+        svg {
+          path{
+            fill: #fff;
+          }
+        }
+    
+        span {
+          color: #fff;
+        }
+      }
+    }
+
+    .items {
+      .item {
+        border: 1px solid var(--dark-mode-white);
+
+        .leftButtons {
+          .input-quantity {
+            border: 1px solid var(--dark-mode-white);
+
+            input {
+              background-color: var(--dark-mode-white);
+              height: 24px;
+              color: var(--main) !important;
+            }
+            
+          }
+        }
+
+        .itemInfo {
+          .info {
+            .title {
+              color: #fff;
+            }
+
+            .cat {
+              color: #a6a6a6;
+            }
+          }
+        }
+    }
+    }
+
+    .items::-webkit-scrollbar {
+      display: none;
+    }
+
+    .cart-total {
+      border-top: 1px var(--dark-mode-white) solid;
+    
+      .total-row {
+        div {
+          span {
+            color: #fff !important;
+          }
+        }
+      }
+    
+      .continu-shopping {
+        a{
+          color: #fff !important;
+        }
+      }
+    }
+  }
+}
+
 /* /////////////////////////////////////////////////////////////////////// */
 /* account sidebar section */
 /* Container Styles */
@@ -13392,11 +13479,11 @@ a:hover span {
   }
 }
 
-body.dark{
+body.dark {
   .account-container {
     background: var(--dark-mode-second);
     border: 1px var(--dark-mode-white) solid;
-   
+
     /* minimize menue button  */
     .minimize-btn {
       background: var(--dark-mode-second);
@@ -13463,14 +13550,14 @@ body.dark{
   font-weight: 400;
   word-wrap: break-word;
 }
-body.dark{
+body.dark {
   .header-title {
     color: #fff;
   }
-  
-  .account-menue-icon{
-    svg{
-      path{
+
+  .account-menue-icon {
+    svg {
+      path {
         stroke: #fff;
       }
     }
@@ -13550,30 +13637,29 @@ body.dark{
   border-bottom: 1px #e9e9e9 solid;
 }
 
-body.dark{
+body.dark {
   /* Item Styles */
-.account-item {
-  border: 1px var(--dark-mode-white) solid;
-  background: transparent;
-}
+  .account-item {
+    border: 1px var(--dark-mode-white) solid;
+    background: transparent;
+  }
 
-.account-item:hover {
-  background: #fd9636cc;
-}
+  .account-item:hover {
+    background: #fd9636cc;
+  }
 
-.account-item.active {
-  background: #fd9636;
-}
+  .account-item.active {
+    background: #fd9636;
+  }
 
-.account-item.active .item-title,
-.account-item:hover .item-title {
-  color: #fff !important;
-}
+  .account-item.active .item-title,
+  .account-item:hover .item-title {
+    color: #fff !important;
+  }
 
-
-.dashboard-icons svg {
-  fill: #fff;
-}
+  .dashboard-icons svg {
+    fill: #fff;
+  }
 
   .account-item.active .dashboard-icons svg,
   .account-item:hover .dashboard-icons svg {
@@ -13724,7 +13810,7 @@ body.dark{
   text-transform: uppercase;
 }
 
-body.dark{
+body.dark {
   .dashboard-container {
     width: calc(100% - 300px);
     display: inline-flex;
@@ -13733,29 +13819,29 @@ body.dark{
     gap: 30px;
     flex-wrap: wrap;
   }
-  
+
   /* Card Styles */
   .dashboard-container a {
     border: 1px var(--dark-mode-white) solid;
   }
-  
+
   .dashboard-container a:hover {
     background-color: #fd9636;
   }
-  
+
   .dashboard-container a:hover .card .title {
     color: #fff !important;
   }
-  
+
   .dashboard-container a:hover .card .icon svg {
     fill: #fff !important;
   }
-  
+
   /* Icon Styles */
   .card .icon svg {
     fill: #fff;
   }
-  
+
   /* Title Styles */
   .card .title {
     color: #fff;
@@ -13886,7 +13972,7 @@ body.dark{
   }
 }
 
-body.dark{
+body.dark {
   .profile-container {
     .inputs-container {
       display: flex;
@@ -13898,25 +13984,25 @@ body.dark{
       width: 100%;
       height: fit-content;
       padding: 50px 0;
-  
+
       .input-content {
         .input-field {
           border: 1px solid var(--dark-mode-white);
-         
+
           input,
           select {
             color: #fff;
 
-            option{
+            option {
               background-color: var(--dark-mode-second);
               color: #fff;
             }
           }
         }
-  
+
         .label {
           background: var(--main-dark);
-  
+
           .text {
             color: #fff;
           }
@@ -14416,7 +14502,7 @@ body.dark{
   }
 }
 
-body.dark{
+body.dark {
   .address-contaier {
     .addresses-container {
       .addres-item {
@@ -14431,7 +14517,7 @@ body.dark{
             justify-content: center;
             align-items: center;
             cursor: pointer;
-  
+
             .change-location-text {
               text-align: center;
               width: 100%;
@@ -14442,20 +14528,20 @@ body.dark{
               line-height: 20px;
               text-wrap: nowrap;
             }
-  
+
             @media (max-width: 900px) {
               .change-location-text {
                 font-size: 14px;
               }
             }
-  
+
             @media (max-width: 450px) {
               .change-location-text {
                 font-size: 12px;
               }
             }
           }
-  
+
           .default-badge {
             padding: 3px 15px;
             background: rgba(14, 34, 77, 0.5);
@@ -14463,7 +14549,7 @@ body.dark{
             display: inline-flex;
             justify-content: center;
             align-items: center;
-  
+
             .badge-text {
               text-align: center;
               color: white;
@@ -14475,13 +14561,11 @@ body.dark{
           }
         }
         .left {
-  
           .delivery-details {
-  
             .delivery-title {
               color: #fff;
             }
-  
+
             .delivery-address {
               color: #fff;
             }
@@ -14489,62 +14573,54 @@ body.dark{
         }
       }
     }
-  
+
     .add-address-button {
-     
-  
       .add-address-text {
         background: var(--main);
         color: #fff;
-     
       }
     }
-  
+
     /* add location section */
     .addLocation {
       .section-header {
         span {
           color: #fff;
         }
-  
+
         .LocationLine {
           border-top: 1px solid var(--dark-mode-white);
         }
       }
-  
+
       .accountLocation-section-items {
         .inputs-container {
-  
           .input-content {
-      
-  
             .input-field {
               border: 1px solid var(--dark-mode-white);
-  
+
               input,
               select {
                 color: #fff;
 
-                option{
+                option {
                   color: #fff;
                   background-color: var(--dark-mode-second);
                 }
               }
             }
-  
+
             .label {
-        
               background: var(--main-dark);
-  
+
               .text {
                 color: #fff1f6;
               }
             }
           }
-  
         }
       }
-  
+
       .checks-container {
         .save-checks {
           .check-lable {
@@ -14927,7 +15003,6 @@ body.dark {
           th {
             color: #fff;
           }
-     
         }
       }
 
@@ -15603,10 +15678,10 @@ body.dark {
           }
 
           div {
-              color: #fff;
-              p {
-                color: #fff !important;
-              }
+            color: #fff;
+            p {
+              color: #fff !important;
+            }
           }
         }
         .line {
@@ -15632,9 +15707,10 @@ body.dark {
         width: 100%;
         align-items: center;
         justify-content: space-between;
-        border-inline-start: 3px solid #fd9636;
-
+        
         .modal-title {
+          border-inline-start: 3px solid #fd9636;
+          padding-inline-start: clamp( 8px, 1.09375vw, 21px);
           display: flex;
           flex-direction: column;
           align-items: start;
@@ -15779,4 +15855,52 @@ body.dark {
       }
     }
   }
+}
+
+
+body.dark{
+  .productAdditionsModal {
+    .modal-dialog {
+      .modal-content {
+        border: 1px solid var(--dark-mode-white);
+        background: var(--dark-mode-second);
+
+        .modal-header {
+          .modal-title {
+            h4 {
+              color: #fff1f6;
+            }
+  
+            h3 {
+              color: #fff;
+            }
+          }
+        }
+  
+        .modal-body {
+          .addition-item {
+            border: 1px solid var(--dark-mode-white);
+  
+            .addition-info {
+              .addition-title {
+                .addition-title-text {
+                  color: #fff;
+                }
+  
+                .addition-price {
+                  .newPrice {
+                    color: #fff;
+                  }
+  
+                  .old-price {
+                    color: #a6a6a6;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  } 
 }
