--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -12040,6 +12040,25 @@ a:hover span {
     .addition-items {
       width: 100%;
 
+      #newest{
+        width: 100%;
+
+        .newestCollapse{
+          background: #fd9636;
+          border: none;
+          border-radius: 10px;
+          padding: clamp(8px, 0.78125vw, 15px) clamp(12px, 1.0416666666666665vw, 20px);
+          font-size: clamp(12px, 0.78125vw, 15px);
+          font-weight: 700;
+          line-height: 18px;
+          text-align: center;
+          color: #ffffff;
+          margin: clamp(8px, 0.78125vw, 15px) auto;
+          display: flex;
+          align-items: center;
+        }
+      }
+
       .line {
         width: 70%;
         border-bottom: 1px solid #f1f1f2;
@@ -12573,6 +12592,12 @@ a:hover span {
   direction: ltr;
 }
 
+@media (max-width: 400px) {
+  .chckBtns {
+    width: 100% !important;
+  }
+}
+
 @media (max-width: 997px) {
   .changeLocation {
     width: 90%;
@@ -12628,11 +12653,13 @@ a:hover span {
 
 .payments h4 {
   color: #fd9636;
+  text-align: right;
 }
 
 .payments span {
   color: #000;
   letter-spacing: -0.01em;
+  text-align: right;
 }
 
 .payments .payment-methods {
@@ -15571,6 +15598,14 @@ body.dark {
   }
 }
 
+/* rtl changes */
+.rtl {
+  .tags,
+  .code {
+    direction: rtl;
+  }
+}
+
 /* ///////////////////////// */
 /* modal dark mode */
 body.dark {
@@ -15702,6 +15737,8 @@ body.dark {
 
     .modal-content {
       padding: clamp(14px, 1.3541666666666667vw, 26px);
+      margin: 100px auto;
+
       .modal-header {
         display: flex;
         width: 100%;
@@ -15834,10 +15871,11 @@ body.dark {
 
                 .newPrice {
                   font-family: Alexandria;
-                  font-size: clamp(12px, 1.25vw, 24px);
+                  font-size: clamp(10px, 1.25vw, 24px);
                   font-weight: 700;
                   line-height: 24px;
                   color: #425a8b;
+                  text-wrap: nowrap;
                 }
 
                 .old-price {
@@ -15847,6 +15885,7 @@ body.dark {
                   line-height: 24px;
                   color: #8c9ec5;
                   text-decoration: line-through;
+                  text-wrap: nowrap;
                 }
               }
             }
@@ -15904,3 +15943,4 @@ body.dark{
     }
   } 
 }
+
